src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_With_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-{000000}</displayFormat>
        <label>Department ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>